@@ -299,6 +299,9 @@ API Changes
   IndexWriter.abortMerges and waitForMerges methods.  (Robert Muir,
   Mike McCandless)
 
+* LUCENE-6099: Add FilterDirectory.unwrap and
+  FilterDirectoryReader.unwrap (Simon Willnauer, Mike McCandless)
+
 Bug Fixes
 
 * LUCENE-5650: Enforce read-only access to any path outside the temporary
